fix(objecttile): ensure objecttile content is left aligned

--- a/src/patterns/ObjectTile/_objectTile.scss
+++ b/src/patterns/ObjectTile/_objectTile.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   max-width: 24.5rem;
+  text-align: left;
 
   &__img {
     margin-bottom: $spacing-sm;
